<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_header"
        android:textSize="25dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/pick_month_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pick_month"/>

        <EditText
            android:id="@+id/pick_day_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pick_day"/>

        <EditText
            android:id="@+id/pick_year_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pick_year"/>

        <EditText
            android:id="@+id/pick_hour_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pick_hour"/>

        <EditText
            android:id="@+id/pick_minute_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pick_minute"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drop_header"
        android:textSize="25dp"
        android:paddingTop="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <EditText
            android:id="@+id/drop_month_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pick_month"/>

        <EditText
            android:id="@+id/drop_day_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pick_day"/>

        <EditText
            android:id="@+id/drop_year_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pick_year"/>

        <EditText
            android:id="@+id/drop_hour_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pick_hour"/>

        <EditText
            android:id="@+id/drop_minute_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pick_minute"/>

    </LinearLayout>

    <Button
        android:id="@+id/confirm_schedule_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_schedule"/>

</LinearLayout>
