<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account" />

        <Button
            android:id="@+id/place_hold_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_hold" />

        <Button
            android:id="@+id/cancel_hold_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_hold" />

        <Button
            android:id="@+id/manage_system_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_system" />

    </LinearLayout>

</LinearLayout>
