<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="edu.csumb.abmedina.otterlibrary.CreateAccount">

    <EditText
        android:id="@+id/create_username_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_username" />

    <EditText
        android:id="@+id/create_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_password" />

    <Button
        android:id="@+id/submit_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_user"/>

</LinearLayout>
